--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,5 +1,6 @@
 @import './variables.scss';
 @import './elements.scss';
+@import '../components/atoms/Modal/index.scss';
 @import '../containers/MainPage/';
 @import '../containers/StockDetailsPage/';
 @import '../containers/CompanyRecommendations/';
