--- a/src/components/molecules/ChatRoom/index.scss
+++ b/src/components/molecules/ChatRoom/index.scss
@@ -22,6 +22,21 @@
   height: 80%;
   padding: 0 0.5rem 3rem 0.5rem;
   overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.chatroom_viewport::-webkit-scrollbar {
+  width: 1.5rem;
+}
+
+.chatroom_viewport::-webkit-scrollbar-thumb {
+  background-color: #46494d;
+  border-radius: 0.3rem;
+}
+
+.chatroom_viewport::-webkit-scrollbar-track {
+  border-radius: 0.3rem;
+  opacity: 0;
 }
 
 .message_box {
