--- a/src/containers/CompanyRecommendations/index.scss
+++ b/src/containers/CompanyRecommendations/index.scss
@@ -1,6 +1,6 @@
 .company_card_list.container {
   display: flex;
-  margin-top: 0;
+  margin-top: 6.5rem;
   width: 90%;
   height: 15rem;
   overflow-x: auto;
@@ -13,10 +13,12 @@
 .container::-webkit-scrollbar {
   width: 0.2rem;
 }
+
 .container::-webkit-scrollbar-thumb {
   background-color: $theme_color;
   border-radius: 0.3rem;
 }
+
 .container::-webkit-scrollbar-track {
   border-radius: 0.3rem;
   box-shadow: inset 0 0 5px white;
